--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -198,7 +198,7 @@
 
 .members-title{
     text-align: center;
-    padding-bottom: 60px;
+    /*padding-bottom: 30px;*/
 }
 
 .members-title h2{
@@ -224,4 +224,90 @@
     font-family: latolight;
     font-size: 20px;
     margin-bottom: 30px;
+}
+
+.emergency-content{
+    height: 300px !important;
+    width: auto;
+    padding-bottom: 15px;
+    /*background-color: #df203a;*/
+}
+
+.emergency-content h3{
+    font-family: latolight;
+    font-size: 24px;
+    color: black;
+    padding: 30px 15px 30px 15px;
+}
+
+.emergency-content p{
+    font-size: 16px;
+    padding: 0px 15px 30px 15px;
+}
+
+
+
+.bg-emergency{
+    min-height: 700px;
+    width: 100%;
+    background-color: #f3f3f3;
+}
+
+.bg-redish{
+    background-color: #df203a;
+    height: 5px;
+    width: 100%;
+}
+
+.bg-gray{
+    background-color: #4e555b;
+    height: 5px;
+    width: 100%;
+}
+
+.bg-support{
+    height: 110px;
+    width: 100%;
+    padding: 30px 0px;
+}
+
+.support-box{
+    text-align: center;
+}
+
+.support-box-m{
+    border-left: 1px solid gray;
+    border-right: 1px solid gray;
+}
+
+/*@import "http://nyplintranet-training.appspot.com/css/themes/nypl/main.css";*/
+/* equal card height */
+.row-equal > div[class*='col-'] {
+    display: flex;
+    flex: 1 0 auto;
+}
+
+.row-equal .card {
+    width: 100%;
+}
+
+/* ensure equal card height inside carousel */
+.carousel-inner>.row-equal.active,
+.carousel-inner>.row-equal.next,
+.carousel-inner>.row-equal.prev {
+    display: flex;
+}
+
+/* prevent flicker during transition */
+.carousel-inner>.row-equal.active.left,
+.carousel-inner>.row-equal.active.right {
+    opacity: 0.5;
+    display: flex;
+}
+
+
+/* control image height */
+.card-img-top-250 {
+    max-height: 250px;
+    overflow:hidden;
 }
